CSS file added and image
Created HTML/CSS file to add h1 and image

--- a/test html file.html
+++ b/test html file.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Professional Website</title>
+</head>
+<body>
+  <div id="Intro">
+    
+  <h1>My Learning & Development Perspective</h1>
+  <br />
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/159/794/original/
+experience_design_mental_model_v44.jpg?1741617679" alt="venn">
 
+</div>
+
+
+</body>
+</html>
